--- a/public/templates/donation.html
+++ b/public/templates/donation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nature for Future</title>
     <link rel="stylesheet" href="/styles/style.css">
     <script src="/script/script.js"></script>
 </head>
@@ -10,6 +10,7 @@
 <div class="Main-Page">
     <button class="Nav-bar-icon">
         <img src="https://img.icons8.com/?size=50&id=120374&format=png" alt="" class="Nav-bar-icon-image">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </button>
     <div class="Nav-bar">
         <a href="/templates/index.html"><img src="/Logo/Frame%203.svg" alt="Nature for Future" class="Home-Logo"></a>
