--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nature for Future</title>
     <link rel="stylesheet" href="/styles/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/script/script.js"></script>
 </head>
 <body>
