--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -12,6 +12,13 @@
     animation: Namechanger 5s infinite;
 }
 
+@-webkit-keyframes Namechanger {
+    0% { content: 'Environmental Sustainability'; }
+    40% { content: 'And are based Upon'; }
+    75% { content: 'Sustainable Development Goals 7 and 13'; }
+    100% { content: 'Environmental Sustainability'; }
+}
+
 @keyframes Namechanger {
     0% { content: 'Environmental Sustainability'; }
     40% { content: 'And are based Upon'; }
