--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,14 +8,16 @@
     position: relative;
     width: 100%;
     color: var(--accent-clr);
+    content: 'Environmental Sustainability';
+    animation: Namechanger 5s infinite;
 }
 
-    /*@-webkit-keyframes Namechanger {*/
-    /*    0% { content: 'Environmental Sustainability'; }*/
-    /*    40% { content: 'And are based Upon'; }*/
-    /*    75% { content: 'Sustainable Development Goals 7 and 13'; }*/
-    /*    100% { content: 'Environmental Sustainability'; }*/
-    /*}*/
+@-webkit-keyframes Namechanger {
+    0% { content: 'Environmental Sustainability'; }
+    40% { content: 'And are based Upon'; }
+    75% { content: 'Sustainable Development Goals 7 and 13'; }
+    100% { content: 'Environmental Sustainability'; }
+}
 
 .Intro-holder {
     height: 80vh;
