--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -12,12 +12,14 @@
         <img src="https://img.icons8.com/?size=50&id=120374&format=png" alt="" class="Nav-bar-icon-image">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </button>
-    <div class="Nav-bar">
+    <div class="Nav-bar-wrapper">
         <a href="/templates/index.html"><img src="/Logo/Frame%203.svg" alt="Nature for Future" class="Home-Logo"></a>
-        <div class="Nav-bar-content-holder"><a href="/templates/events.html" class="Nav-bar-content" >Events</a></div>
-        <div  class="Nav-bar-content-holder"><a href="/templates/commnity.html" class="Nav-bar-content" >Community Forums</a></div>
-        <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content" >Donation Opportunities</a></div>
-        <div class="Nav-bar-content-holder"><a href="/templates/network.html" class="Nav-bar-content" >Networking and Collaborations</a> </div>
+        <div class="Nav-bar">
+            <div class="Nav-bar-content-holder"><a href="/templates/events.html" class="Nav-bar-content" >Events</a></div>
+            <div  class="Nav-bar-content-holder"><a href="/templates/commnity.html" class="Nav-bar-content" >Community Forums</a></div>
+            <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content" >Donation Opportunities</a></div>
+            <div class="Nav-bar-content-holder"><a href="/templates/network.html" class="Nav-bar-content" >Networking and Collaborations</a> </div>
+        </div>
     </div>
 </div>
 <!--nav bar ends here-->
