--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -15,6 +15,7 @@
        <div class="Nav-bar-wrapper">
        <a href="/templates/index.html"><img src="/Logo/Frame%203.svg" alt="Nature for Future" class="Home-Logo"></a>
            <div class="Nav-bar">
+               <div class="Nav-bar-content-holder"><a href="/templates/about.html" class="Nav-bar-content" >About</a></div>
                <div class="Nav-bar-content-holder"><a href="/templates/events.html" class="Nav-bar-content" >Events</a></div>
                <div  class="Nav-bar-content-holder"><a href="/templates/commnity.html" class="Nav-bar-content" >Community Forums</a></div>
                <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content" >Donation Opportunities</a></div>
@@ -24,9 +25,36 @@
        <!--nav bar ends here-->
        <div class="Intro-holder">
        <div class="Intro-holder-inner">
-       <h1>Hey there! <br>We are a group of Environmental Enthusiasts Striving for,<br><em class="Animation"></em></h1>
+       <h1>Hey there! <br>We are a group of Environmental Enthusiasts Striving for<br><em class="Animation"></em></h1>
        </div>
        </div>
    </div>
+<footer>
+    <div class="footer-holder">
+    <div class="Image-Holder">
+        <img src="/Logo/Frame%204.svg">
+    </div>
+        <div class="Footer-text">
+            <h3>Navigation Links</h3><br>
+            <h4>About Us</h4>
+            <h4>Events</h4>
+            <h4>Community</h4>
+            <h4>Donate Opportunities</h4>
+            <h4>Networking</h4>
+        </div>
+        <div class="Footer-text">
+            <h3><a href="http://">Sign up to our Newsletter</a></h3>
+            <h3><a href="http://">Email Us</a></h3>
+        </div>
+        <div class="Footer-text">
+            <p>&copy; 2024 Nature for Future. All rights reserved.</p>
+        </div>
+        <div class="Footer-text">
+            <h3>Join Our Movement</h3>
+            <p>Be a part of our community and help us make a difference in environmental sustainability. Sign up now to get involved!</p>
+            <a href="/join-us" class="cta-button">Join Us</a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
