--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,6 +2,12 @@
     font-family: 'Lora'; /* A name to be used later */
     src: url('../fonts/Lora-VariableFont_wght.ttf'); /* URL to font */
 }
+:root {
+    --bg-color: #FFF5EE;
+    --text-color: #000000;
+    --sec-clr: #F5F5F5;
+    --accent-clr: #2057A9;
+}
 
 .Animation:after {
     display: block;
@@ -33,12 +39,6 @@
     justify-content: center;
 }
 
-:root {
-    --bg-color: #FFF5EE;
-    --text-color: #000000;
-    --sec-clr: #F5F5F5;
-    --accent-clr: #FF5722;
-}
 
 body {
     font-family: 'Lora', sans-serif;
@@ -46,7 +46,7 @@ body {
 }
 
 .Main-Page {
-    height: 97vh;
+    height: 99vh;
     background-color: var(--sec-clr);
 }
 
@@ -89,8 +89,63 @@ body {
     justify-content: space-between;
     padding: 10px;
 }
+footer{
+    background-color: #C6E0C3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.footer-holder{
+    display: flex;
+    padding: 2rem;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.Image-Holder{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.Footer-text{
+    text-align: center;
+    padding: 1rem;
+}
+.footer-section.copyright {
+    text-align: center;
+    font-size: 14px;
+    color: var(--text-color);
+    margin-top: 30px;
+}
 
+.footer-section.call-to-action .cta-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #000;
+    border-radius: 4px;
+    text-decoration: none;
+}
+
+.footer-section.call-to-action .cta-button:hover {
+    background-color: #333; /* Darker color on hover */
+}
 @media only screen and (max-width: 600px) {
+    footer{
+        background-color: #C6E0C3;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .Footer-text{
+        border-radius: 3px;
+        border-color: black;
+    }
+    .footer-holder{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
     .Home-Logo {
         height: 15vh;
     }
