--- a/public/templates/donation.html
+++ b/public/templates/donation.html
@@ -15,6 +15,7 @@
     <div class="Nav-bar-wrapper">
         <a href="/templates/index.html"><img src="/Logo/Frame%203.svg" alt="Nature for Future" class="Home-Logo"></a>
         <div class="Nav-bar">
+            <div class="Nav-bar-content-holder"><a href="/templates/about.html" class="Nav-bar-content" >About</a></div>
             <div class="Nav-bar-content-holder"><a href="/templates/events.html" class="Nav-bar-content" >Events</a></div>
             <div  class="Nav-bar-content-holder"><a href="/templates/commnity.html" class="Nav-bar-content" >Community Forums</a></div>
             <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content" >Donation Opportunities</a></div>
