--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nature for Future</title>
+    <link rel="stylesheet" href="/styles/style.css">
+    <script src="/script/script.js"></script>
 </head>
 <body>
-
+<div class="Main-Page">
+    <button class="Nav-bar-icon">
+        <img src="https://img.icons8.com/?size=50&id=120374&format=png" alt="" class="Nav-bar-icon-image">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </button>
+    <div class="Nav-bar-wrapper">
+        <a href="/templates/index.html"><img src="/Logo/Frame%203.svg" alt="Nature for Future" class="Home-Logo"></a>
+        <div class="Nav-bar">
+            <div class="Nav-bar-content-holder"><a href="/templates/about.html" class="Nav-bar-content" >About</a></div>
+            <div class="Nav-bar-content-holder"><a href="/templates/events.html" class="Nav-bar-content" >Events</a></div>
+            <div  class="Nav-bar-content-holder"><a href="/templates/commnity.html" class="Nav-bar-content" >Community Forums</a></div>
+            <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content" >Donation Opportunities</a></div>
+            <div class="Nav-bar-content-holder"><a href="/templates/network.html" class="Nav-bar-content" >Networking and Collaborations</a> </div>
+        </div>
+    </div>
+    <div class="Intro-holder">
+        <div class="Intro-holder-inner">
+            <h4>Suhas Koheda <br>23BAI1148 <br>suhas.koheda2023@vitstudent.ac.in <br>7396824087</h4>
+        </div>
+    </div>
+</div>
+<!--nav bar ends here-->
 </body>
 </html>
