--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -7,7 +7,7 @@
     <script src="/script/script.js"></script>
 </head>
 <body>
-<div class="Main-Page">
+<div class="other-Page">
     <button class="Nav-bar-icon">
         <img src="https://img.icons8.com/?size=50&id=120374&format=png" alt="" class="Nav-bar-icon-image">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
