--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -35,9 +35,9 @@
         <img src="/Logo/Frame%204.svg">
     </div>
         <div class="Footer-text">
-            <h3>Navigation Links</h3><br>
-            <h4>About Us</h4>
-            <h4>Events</h4>
+            <h3><a href="http://"> Navigation Links</a></h3><br>
+            <h4><a href="http://">About Us</a></h4>
+            <h4><a href="http://">Events</a></h4>
             <h4>Community</h4>
             <h4>Donate Opportunities</h4>
             <h4>Networking</h4>
