--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -23,6 +23,16 @@
         </div>
     </div>
 </div>
-<!--nav bar ends here-->
+<div class="wrapper">
+<div class="Outer">
+    <div class="Inner">
+        <h2><a href="/templates/join.html">Join an event</a></h2>
+    </div>
+    <br>
+    <div class="Inner">
+        <h2><a href="http://">Host an event</a></h2>
+    </div>
+</div>
+</div>
 </body>
 </html>
