--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -49,7 +49,7 @@
         <div class="Footer-text">
             <p>&copy; 2024 Nature for Future. All rights reserved.</p>
         </div>
-        <div class="Footer-text">
+        <div class="footer-text">
             <h3>Join Our Movement</h3>
             <p>Be a part of our community and help us make a difference in environmental sustainability. Sign up now to get involved!</p>
             <a href="/join-us" class="cta-button">Join Us</a>
