--- a/public/templates/Host.html
+++ b/public/templates/Host.html
@@ -24,15 +24,11 @@
     </div>
 </div>
 <div class="wrapper">
-<div class="Outer">
-    <div class="Inner">
-        <h2><a href="/templates/join.html">Join an event</a></h2>
+    <div class="Outer">
+        <div class="Inner-Host">
+            <a href="/auth/google" class="google-login">Login with Google</a>
+        </div>
     </div>
-    <br>
-    <div class="Inner">
-        <h2><a href="/templates/Host.html">Host an event</a></h2>
-    </div>
-</div>
 </div>
 </body>
 </html>
