--- a/public/templates/join.html
+++ b/public/templates/join.html
@@ -17,29 +17,14 @@
         <div class="Nav-bar">
             <div class="Nav-bar-content-holder"><a href="/templates/about.html" class="Nav-bar-content">About</a></div>
             <div class="Nav-bar-content-holder"><a href="/templates/events.html" class="Nav-bar-content">Events</a></div>
-            <div class="Nav-bar-content-holder"><a href="/templates/community.html" class="Nav-bar-content">Community Forums</a></div>
+            <div class="Nav-bar-content-holder"><a href="/templates/commnity.html" class="Nav-bar-content">Community Forums</a></div>
             <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content">Donation Opportunities</a></div>
-            <div class="Nav-bar-content-holder"><a href="/templates/network.html" class="Nav-bar-content">Networking and Collaborations</a></div>
         </div>
     </div>
 </div>
 <div class="Outer">
     <div class="Inner">
-        <h1>Contact Us</h1>
-        <form id="contactForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <br>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-            <br>
-            <button type="submit">Submit</button>
-            <!-- Google login link -->
-            <a href="/auth/google" class="google-login">Login with Google</a>
-        </form>
+
     </div>
 </div>
 </body>
