--- a/public/templates/Host.html
+++ b/public/templates/Host.html
@@ -24,8 +24,8 @@
     </div>
 </div>
 <div class="wrapper">
-    <div class="Outer">
-        <div class="Inner-Host">
+    <div class="Outer" id="Host">
+        <div class="Inner">
             <a href="/auth/google" class="google-login">Login with Google</a>
         </div>
     </div>
