--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/script/script.js"></script>
+    <script src="/scripts/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/loaders/GLTFLoader.js"></script>
 </head>
 <body>
    <div class="Main-Page">
@@ -28,6 +31,7 @@
        </div>
        </div>
    </div>
+
 <footer>
     <div class="footer-holder">
     <div class="Image-Holder">
