--- a/public/templates/join.html
+++ b/public/templates/join.html
@@ -24,7 +24,42 @@
 </div>
 <div class="Outer">
     <div class="Inner">
-
+        <h4>Event Name</h4>
+        <h6>Host</h6>
+        <h6>Location</h6>
+        <h6>About</h6>
+    </div>
+    <div class="Inner">
+        <h4>Event Name</h4>
+        <h6>Host</h6>
+        <h6>Location</h6>
+        <h6>About</h6>
+    </div>
+    <div class="Inner">
+        <h4>Event Name</h4>
+        <h6>Host</h6>
+        <h6>Location</h6>
+        <h6>About</h6>
+    </div>
+</div>
+<div class="Outer">
+    <div class="Inner">
+        <h4>Event Name</h4>
+        <h6>Host</h6>
+        <h6>Location</h6>
+        <h6>About</h6>
+    </div>
+    <div class="Inner">
+        <h4>Event Name</h4>
+        <h6>Host</h6>
+        <h6>Location</h6>
+        <h6>About</h6>
+    </div>
+    <div class="Inner">
+        <h4>Event Name</h4>
+        <h6>Host</h6>
+        <h6>Location</h6>
+        <h6>About</h6>
     </div>
 </div>
 </body>
