--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -21,7 +21,7 @@
             <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content" >Donation Opportunities</a></div>
         </div>
     </div>
-</div>
+</div><br><br>
 <div class="wrapper">
 <div class="Outer">
     <div class="Inner">
