--- a/public/templates/join.html
+++ b/public/templates/join.html
@@ -22,19 +22,21 @@
         </div>
     </div>
 </div>
+<br><br>
+<div class="wrapper">
 <div class="Outer">
     <div class="Inner">
         <h4>Event Name</h4>
         <h6>Host</h6>
         <h6>Location</h6>
         <h6>About</h6>
-    </div>
+    </div><br>
     <div class="Inner">
         <h4>Event Name</h4>
         <h6>Host</h6>
         <h6>Location</h6>
         <h6>About</h6>
-    </div>
+    </div><br>
     <div class="Inner">
         <h4>Event Name</h4>
         <h6>Host</h6>
@@ -42,25 +44,7 @@
         <h6>About</h6>
     </div>
 </div>
-<div class="Outer">
-    <div class="Inner">
-        <h4>Event Name</h4>
-        <h6>Host</h6>
-        <h6>Location</h6>
-        <h6>About</h6>
-    </div>
-    <div class="Inner">
-        <h4>Event Name</h4>
-        <h6>Host</h6>
-        <h6>Location</h6>
-        <h6>About</h6>
-    </div>
-    <div class="Inner">
-        <h4>Event Name</h4>
-        <h6>Host</h6>
-        <h6>Location</h6>
-        <h6>About</h6>
-    </div>
 </div>
+
 </body>
 </html>
