--- a/public/templates/join.html
+++ b/public/templates/join.html
@@ -45,6 +45,31 @@
     </div>
 </div>
 </div>
-
+<footer>
+    <div class="footer-holder">
+        <div class="Image-Holder">
+            <img src="/Logo/Frame%204.svg" alt="Footer Logo">
+        </div>
+        <div class="Footer-text">
+            <h3><a href="/templates/about.html">About Us</a></h3>
+            <h4><a href="/templates/events.html">Events</a></h4>
+            <h4><a href="/templates/community.html">Community</a></h4>
+            <h4><a href="/templates/donation.html">Donation Opportunities</a></h4>
+            <h4><a href="/templates/networking.html">Networking</a></h4>
+        </div>
+        <div class="Footer-text">
+            <h3><a href="mailto:info@natureforfuture.org">Email Us</a></h3>
+            <h3><a href="/subscribe">Sign up for our Newsletter</a></h3>
+        </div>
+        <div class="Footer-text">
+            <p>&copy; 2024 Nature for Future. All rights reserved.</p>
+        </div>
+        <div class="footer-text">
+            <h3>Join Our Movement</h3>
+            <p>Be a part of our community and help us make a difference in environmental sustainability. Sign up now to get involved!</p>
+            <a href="/join-us" class="cta-button">Join Us</a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
