--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -324,6 +324,7 @@ input, #card-element {
     .Outer {
         padding: 1rem;
         flex-direction: column;
+        height: auto;
     }
     .Inner {
         padding: 2rem;
