feat:stikcy social media handles

--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -5,6 +5,8 @@
     <title>Nature for Future</title>
     <link rel="stylesheet" href="/styles/style.css">
     <script src="/script/script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
 <div class="other-Page">
@@ -21,6 +23,24 @@
             <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content" >Donation Opportunities</a></div>
         </div>
     </div>
+    <div class="vertical">
+        <div class="social-media">
+            <a href="https://www.facebook.com" target="_blank" title="Facebook">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank" title="Twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com" target="_blank" title="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com" target="_blank" title="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://www.youtube.com" target="_blank" title="YouTube">
+                <i class="fab fa-youtube"></i>
+            </a>
+        </div>
 </div><br><br>
 <div class="wrapper">
 <div class="Outer">
