--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/script/script.js"></script>
     <script src="/scripts/main.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/loaders/GLTFLoader.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
    <div class="Main-Page">
@@ -25,13 +24,31 @@
            </div>
        </div>
        <!--nav bar ends here-->
+       <div class="vertical">
+       <div class="social-media">
+           <a href="https://www.facebook.com" target="_blank" title="Facebook">
+               <i class="fab fa-facebook-f"></i>
+           </a>
+           <a href="https://twitter.com" target="_blank" title="Twitter">
+               <i class="fab fa-twitter"></i>
+           </a>
+           <a href="https://www.instagram.com" target="_blank" title="Instagram">
+               <i class="fab fa-instagram"></i>
+           </a>
+           <a href="https://www.linkedin.com" target="_blank" title="LinkedIn">
+               <i class="fab fa-linkedin-in"></i>
+           </a>
+           <a href="https://www.youtube.com" target="_blank" title="YouTube">
+               <i class="fab fa-youtube"></i>
+           </a>
+       </div>
+       </div>
        <div class="Intro-holder">
        <div class="Intro-holder-inner">
        <h1>Hey there! <br>We are a group of Environmental Enthusiasts Striving for<br><em class="Animation"></em></h1>
        </div>
        </div>
    </div>
-
 <footer>
     <div class="footer-holder">
     <div class="Image-Holder">
