--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -42,6 +42,7 @@
 body {
     font-family: 'Lora', sans-serif;
     color: var(--text-color);
+    overflow-y:auto ;
 }
 
 .Main-Page {
@@ -189,7 +190,7 @@ footer{
 .container {
     max-width: 600px;
     margin: 50px auto;
-    padding: 20px;
+    padding: 2rem;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
@@ -240,7 +241,19 @@ input, #card-element {
     color: red;
     margin-top: 10px;
 }
-
+.vertical{
+    display: flex;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    margin-right: 0;
+}
+.social-media {
+    display: inline-flex;
+    position: absolute;
+    flex-direction: column;
+        box-shadow: 8px 8px 10px #44AC3B;
+    }
 @media only screen and (max-width: 600px) {
     footer{
         background-color: #C6E0C3;
@@ -312,14 +325,15 @@ input, #card-element {
         height: 80vh;
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: flex-start;
         text-align: center;
+        padding: 2rem;
     }
 
     .Intro-holder-inner {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
     }
     .Outer {
         padding: 1rem;
