--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -5,6 +5,7 @@
     <title>Nature for Future</title>
     <link rel="stylesheet" href="/styles/style.css">
     <script src="/script/script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 <div class="Main-Page">
@@ -21,6 +22,25 @@
             <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content" >Donation Opportunities</a></div>
         </div>
     </div>
+    <div class="vertical">
+        <div class="social-media">
+            <a href="https://www.facebook.com" target="_blank" title="Facebook">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank" title="Twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com" target="_blank" title="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com" target="_blank" title="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://www.youtube.com" target="_blank" title="YouTube">
+                <i class="fab fa-youtube"></i>
+            </a>
+        </div>
+        </div>
     <div class="Intro-holder">
         <div class="Intro-holder-inner">
             <h4>Suhas Koheda <br>23BAI1148 <br>suhas.koheda2023@vitstudent.ac.in <br>7396824087</h4>
