--- a/public/templates/commnity.html
+++ b/public/templates/commnity.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
     <script src="/script/script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 <div class="Main-Page" style="height: auto">
@@ -21,7 +22,26 @@
             <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content">Donation Opportunities</a></div>
         </div>
     </div>
-    <div class="Community-Forums">
+    <div class="vertical">
+        <div class="social-media">
+            <a href="https://www.facebook.com" target="_blank" title="Facebook">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank" title="Twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com" target="_blank" title="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com" target="_blank" title="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://www.youtube.com" target="_blank" title="YouTube">
+                <i class="fab fa-youtube"></i>
+            </a>
+        </div>
+    </div>
+    <div class="Community-Forums" style="padding: 2rem">
         <div class="Forum-Header">
             <h1>Community Forums</h1>
             <p>Welcome to the Community Forums! Engage with other environmental enthusiasts, share ideas, and collaborate on sustainability projects.</p>
