--- a/public/templates/join.html
+++ b/public/templates/join.html
@@ -6,6 +6,7 @@
     <title>Nature for Future</title>
     <link rel="stylesheet" href="/styles/style.css">
     <script src="/script/script.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 <div class="other-Page">
@@ -20,6 +21,25 @@
             <div class="Nav-bar-content-holder"><a href="/templates/commnity.html" class="Nav-bar-content">Community Forums</a></div>
             <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content">Donation Opportunities</a></div>
         </div>
+    </div>
+</div>
+<div class="vertical">
+    <div class="social-media">
+        <a href="https://www.facebook.com" target="_blank" title="Facebook">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://twitter.com" target="_blank" title="Twitter">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.instagram.com" target="_blank" title="Instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.linkedin.com" target="_blank" title="LinkedIn">
+            <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://www.youtube.com" target="_blank" title="YouTube">
+            <i class="fab fa-youtube"></i>
+        </a>
     </div>
 </div>
 <br><br>
@@ -69,6 +89,7 @@
             <p>Be a part of our community and help us make a difference in environmental sustainability. Sign up now to get involved!</p>
             <a href="/join-us" class="cta-button">Join Us</a>
         </div>
+
     </div>
 </footer>
 </body>
