feat: add add page and other chnages

--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -49,20 +49,24 @@
 </div>
 <!--nav bar ends here-->
 <footer>
+    <div class="Footer-div">
+        <p>Stay Connected! Follow us on social media.</p>
+    </div>
     <div class="footer-holder">
         <div class="Image-Holder">
-            <img src="/Logo/Frame%204.svg" alt="Footer Logo">
+            <img src="/Logo/Frame%204.svg">
         </div>
         <div class="Footer-text">
-            <h3><a href="/templates/about.html">About Us</a></h3>
+            <h3>Navigation Links</h3>
+            <h4><a href="/templates/about.html">About Us</a></h4>
             <h4><a href="/templates/events.html">Events</a></h4>
-            <h4><a href="/templates/community.html">Community</a></h4>
-            <h4><a href="/templates/donation.html">Donation Opportunities</a></h4>
-            <h4><a href="/templates/networking.html">Networking</a></h4>
+            <h4><a href="/templates/commnity.html">Community</a></h4>
+            <h4><a href="/templates/donation.html">Donate Opportunities</a></h4>
         </div>
         <div class="Footer-text">
-            <h3><a href="mailto:info@natureforfuture.org">Email Us</a></h3>
-            <h3><a href="/subscribe">Sign up for our Newsletter</a></h3>
+            <h3>Connect With Us</h3>
+            <h3><a href="/templates/newsletter.html">Sign up to our Newsletter</a></h3>
+            <h3><a href="mailto:info@natureforfuture.com">Email Us</a></h3>
         </div>
         <div class="Footer-text">
             <p>&copy; 2024 Nature for Future. All rights reserved.</p>
@@ -74,5 +78,7 @@
         </div>
     </div>
 </footer>
+</body>
+</html>
 </body>
 </html>
