--- a/public/templates/newsletter.html
+++ b/public/templates/newsletter.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nature for Future</title>
+    <title>Sign up for our Newsletter - Nature for Future</title>
     <link rel="stylesheet" href="/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/script/script.js"></script>
@@ -20,11 +19,12 @@
         <div class="Nav-bar">
             <div class="Nav-bar-content-holder"><a href="/templates/about.html" class="Nav-bar-content" >About</a></div>
             <div class="Nav-bar-content-holder"><a href="/templates/events.html" class="Nav-bar-content" >Events</a></div>
-            <div  class="Nav-bar-content-holder"><a href="/templates/commnity.html" class="Nav-bar-content" >Community Forums</a></div>
+            <div class="Nav-bar-content-holder"><a href="/templates/commnity.html" class="Nav-bar-content" >Community Forums</a></div>
             <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content" >Donation Opportunities</a></div>
         </div>
     </div>
-    <!--nav bar ends here-->
+    <!-- Navigation bar ends here -->
+
     <div class="vertical">
         <div class="social-media">
             <a href="https://www.facebook.com" target="_blank" title="Facebook">
@@ -44,19 +44,25 @@
             </a>
         </div>
     </div>
+
+    <!-- Newsletter sign-up form -->
     <div class="Intro-holder">
         <div class="Intro-holder-inner">
-            <h1>Hey there! <br>We are a group of Environmental Enthusiasts Striving for<br><em class="Animation"></em></h1>
+            <h1>Sign Up for Our Newsletter</h1>
+            <p>Stay updated with the latest news, events, and opportunities from Nature for Future. Join our mailing list today!</p>
+            <form action="/subscribe" method="post">
+                <label for="email">Email Address:</label>
+                <input type="email" id="email" name="email" required>
+                <button type="submit" class="cta-button">Subscribe</button>
+            </form>
         </div>
     </div>
 </div>
+
 <footer>
-    <div class="Footer-div">
-        <p>Stay Connected! Follow us on social media.</p>
-    </div>
     <div class="footer-holder">
         <div class="Image-Holder">
-            <img src="/Logo/Frame%204.svg">
+            <img src="/Logo/Frame%204.svg" alt="Nature for Future">
         </div>
         <div class="Footer-text">
             <h3>Navigation Links</h3>
