--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -20,8 +20,8 @@
 
 @-webkit-keyframes Namechanger {
     0% { content: 'Environmental Sustainability'; }
-    40% { content: 'And are based Upon'; }
-    75% { content: 'Sustainable Development Goals 7 and 13'; }
+    60% { content: 'And based Upon'; }
+    90% { content: 'Sustainable Development Goals 7 and 13'; }
     100% { content: 'Environmental Sustainability'; }
 }
 
@@ -199,7 +199,23 @@ footer{
     width: 100px;
     margin-bottom: 10px;
 }
-
+.Footer-text a{
+    color: var(--accent-clr);
+}
+.Footer-div{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #f1f1f1;
+    padding: 10px;
+    text-align: center;
+    border-top: 1px solid #ccc;
+    z-index: 1000; /* Ensure it is on top of other elements */
+    transition: transform 0.3s ease-in-out;
+}
+.footer-visible.Footer-div{
+    transform: translateY(100%);
+}
 .donation-form {
     margin-top: 20px;
 }
@@ -252,8 +268,8 @@ input, #card-element {
     display: inline-flex;
     position: absolute;
     flex-direction: column;
-        box-shadow: 8px 8px 10px #44AC3B;
-    }
+    box-shadow: 8px 8px 10px #44AC3B;
+}
 @media only screen and (max-width: 600px) {
     footer{
         background-color: #C6E0C3;
@@ -282,7 +298,7 @@ input, #card-element {
         display: none;
         height: 70vh;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-evenly;
         position: sticky;
     }
 
@@ -292,7 +308,7 @@ input, #card-element {
         font-size: 1rem;
         font-family: 'Lora', sans-serif;
         text-decoration: none;
-        padding: 0.2rem;
+        padding: 0;
         margin-top: 1vh;
     }
 
@@ -317,7 +333,7 @@ input, #card-element {
         display: block;
         position: relative;
         height: 10vw;
-        margin-top: 6%;
+        margin-top: 1%;
         z-index: 1;
     }
 
