--- a/public/templates/join.html
+++ b/public/templates/join.html
@@ -65,21 +65,67 @@
     </div>
 </div>
 </div>
-<footer>
+<div class="wrapper">
+    <div class="Outer">
+        <div class="Inner">
+            <h4>Event Name</h4>
+            <h6>Host</h6>
+            <h6>Location</h6>
+            <h6>About</h6>
+        </div><br>
+        <div class="Inner">
+            <h4>Event Name</h4>
+            <h6>Host</h6>
+            <h6>Location</h6>
+            <h6>About</h6>
+        </div><br>
+        <div class="Inner">
+            <h4>Event Name</h4>
+            <h6>Host</h6>
+            <h6>Location</h6>
+            <h6>About</h6>
+        </div>
+    </div>
+</div><div class="wrapper">
+    <div class="Outer">
+        <div class="Inner">
+            <h4>Event Name</h4>
+            <h6>Host</h6>
+            <h6>Location</h6>
+            <h6>About</h6>
+        </div><br>
+        <div class="Inner">
+            <h4>Event Name</h4>
+            <h6>Host</h6>
+            <h6>Location</h6>
+            <h6>About</h6>
+        </div><br>
+        <div class="Inner">
+            <h4>Event Name</h4>
+            <h6>Host</h6>
+            <h6>Location</h6>
+            <h6>About</h6>
+        </div>
+    </div>
+</div><footer>
+    <div class="Footer-div">
+        <p>Stay Connected! Follow us on social media.</p>
+    </div>
     <div class="footer-holder">
         <div class="Image-Holder">
-            <img src="/Logo/Frame%204.svg" alt="Footer Logo">
+            <img src="/Logo/Frame%204.svg">
         </div>
         <div class="Footer-text">
-            <h3><a href="/templates/about.html">About Us</a></h3>
+            <h3>Navigation Links</h3>
+            <h4><a href="/templates/about.html">About Us</a></h4>
             <h4><a href="/templates/events.html">Events</a></h4>
-            <h4><a href="/templates/community.html">Community</a></h4>
-            <h4><a href="/templates/donation.html">Donation Opportunities</a></h4>
-            <h4><a href="/templates/networking.html">Networking</a></h4>
+            <h4><a href="/templates/commnity.html">Community</a></h4>
+            <h4><a href="/templates/donation.html">Donate Opportunities</a></h4>
         </div>
         <div class="Footer-text">
-            <h3><a href="mailto:info@natureforfuture.org">Email Us</a></h3>
-            <h3><a href="/subscribe">Sign up for our Newsletter</a></h3>
+            <h3>Connect With Us</h3>
+            <h3><a href="/templates/newsletter.html">Sign up to our Newsletter</a></h3>
+            <h3><a href="mailto:info@natureforfuture.com">Email Us</a></h3>
         </div>
         <div class="Footer-text">
             <p>&copy; 2024 Nature for Future. All rights reserved.</p>
@@ -89,7 +135,6 @@
             <p>Be a part of our community and help us make a difference in environmental sustainability. Sign up now to get involved!</p>
             <a href="/join-us" class="cta-button">Join Us</a>
         </div>
-
     </div>
 </footer>
 </body>
