fix:change add page

--- a/public/templates/add.html
+++ b/public/templates/add.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Event - Nature for Future</title>
-    <link rel="stylesheet" href="/styles/style.css"> <!-- Your existing stylesheet -->
+    <link rel="stylesheet" href="/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://js.stripe.com/v3/"></script>
     <script src="/script/script.js" defer></script>
@@ -78,10 +78,10 @@
     <div class="Nav-bar-wrapper">
         <a href="/templates/index.html"><img src="/Logo/Frame%203.svg" alt="Nature for Future" class="Home-Logo"></a>
         <div class="Nav-bar">
-            <a href="/templates/about.html" class="Nav-bar-content">About</a>
-            <a href="/templates/events.html" class="Nav-bar-content">Events</a>
-            <a href="/templates/commnity.html" class="Nav-bar-content">Community Forums</a>
-            <a href="/templates/donation.html" class="Nav-bar-content">Donation Opportunities</a>
+            <div class="Nav-bar-content-holder"><a href="/templates/about.html" class="Nav-bar-content" >About</a></div>
+            <div class="Nav-bar-content-holder"><a href="/templates/events.html" class="Nav-bar-content" >Events</a></div>
+            <div  class="Nav-bar-content-holder"><a href="/templates/commnity.html" class="Nav-bar-content" >Community Forums</a></div>
+            <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content" >Donation Opportunities</a></div>
         </div>
     </div>
 
